--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Grocery List</title>
+    <title>Shopping List</title>
   </head>
   <body>
     <div class="container">
-      <div class="groceries">
-        <h1 style="text-align: center">Grocery List</h1>
+      <div class="shopping">
+        <h1 style="text-align: center">Shopping List</h1>
         <br />
         <div style="text-align: center">
-          <i id="pencil" class="fa-solid fa-pencil"></i
-          ><input id="userInput" type="text" />
+          <i id="pencil" class="fa-solid fa-pencil"></i>
+          <input id="userInput" type="text" />
         </div>
         <br />
         <div id="allItems"></div>
